--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  firebase_auth: ^0.20.0
-  firebase_core: 0.7.0
+  firebase_auth: ^0.18.0
+  firebase_core: ^0.5.0
+  equatable: 1.2.0
+  bloc: ^6.0.3
+  flutter_bloc: ^6.0.5
   flutter_countdown_timer: 3.0.1
+  cloud_firestore: 0.14.3
+  fluttertoast: 7.0.2
+
+
 
 dev_dependencies:
   flutter_test:
