--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
   flutter_bloc: ^6.0.5
   flutter_countdown_timer: 3.0.1
   cloud_firestore: 0.14.3
-  firebase_messaging: 8.0.0-dev.1
-  flutter_local_notifications: 4.0.1+2
+  firebase_messaging: 7.0.3
   fluttertoast: 7.0.2
   cached_network_image: 2.4.0
+  shared_preferences: 0.5.12
+
 
 
 
