--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,18 @@ dependencies:
   fluttertoast: 7.0.2
   cached_network_image: 2.4.0
   shared_preferences: 0.5.12
+  mockito: 4.1.1
+  test: ^1.5.1
+  rxdart:
+  flutter_automation: any
+
 
 
 
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
