--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,13 @@ dependencies:
   cloud_firestore: 0.14.3
   firebase_messaging: 7.0.3
   fluttertoast: 7.0.2
-  cached_network_image: 2.4.0
   shared_preferences: 0.5.12
   mockito: 4.1.1
   test: ^1.5.1
   rxdart:
   flutter_automation: any
+  faker: 1.3.0
+  uuid: 2.2.0
 
 
 
